[SPInvalidation] Always inline the internal methods of PaintLayerClipper.

In local runs with SlimmingPaintInvalidation turned on, this improves
rasterize_and_record_micro.partial_invalidation/subsequence_caching_disabled
from about 0.82ms to 0.62ms, a 25% improvement.

BUG=699198
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2785583002
Cr-Commit-Position: refs/heads/master@{#460278}

Former-commit-id: 9c0482de8c913c46a62bb22b2f22a217e52dbf05